--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "deepmerge": "^4.2.2",
     "expo": "~45.0.0",
     "expo-constants": "~13.1.1",
     "expo-status-bar": "~1.3.0",
